# mcsoc-bot

./: .env.example  main.py  pyproject.toml
